# relationalize

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: relationalize-python-lint.yml  relationalize-python-tests.yml
examples/: concurrency_example.py  full_mongodb_psql_pipeline.py  full_pokemon_psql_pipeline.py  full_pokemon_s3_redshift_pipeline.py  local_fs_example.py  local_fs_example_csv_output.py  memory_example.py  s3_redshift_example.py
examples/example_data/: mock_lms_data.json
examples/example_data/sharded_mock_lms/: mock_lms_0.json  mock_lms_1.json  mock_lms_2.json  mock_lms_3.json  mock_lms_4.json  mock_lms_5.json  mock_lms_6.json  mock_lms_7.json  mock_lms_8.json  mock_lms_9.json
relationalize/: __init__.py  relationalize.py  schema.py  sql_dialects.py  types.py  utils.py
scripts/: runPythonTests.sh
test/: relationalize.test.py  schema.test.py  setup_tests.py
